fixed spacing of content area on smaller screens with left sidebar activated

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://themezee.com/themes/wellington/
 Author: ThemeZee
 Author URI: https://themezee.com
 Description: Wellington is a clean and simple Magazine WordPress theme with beautiful typography and subtle colors. The theme includes two different post layouts, a featured post slider and thoughtful theme settings in the Customizer.
-Version: 1.4
+Version: 1.4.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: wellington
@@ -2531,21 +2531,11 @@ object {
 	-ms-flex-order: 1;
 }
 
-@media only screen and (max-width: 70em) {
-	.sidebar-left .content-area {
-		padding-right: 0;
-		padding-left: 3em;
-	}
-
-}
-
 @media only screen and (max-width: 60em) {
-	.sidebar-left .content-area {
-		padding: 0;
+	.sidebar-left .sidebar {
+		border-right: none;
 	}
-
 }
-
 
 /*--------------------------------------------------------------
 # 16.0 - Media Query Fixes
